# ollama-rag

./: README.md  main.py  pyproject.toml  rag.py
rag/: rag.py
rag/llm/: __init__.py  base.py  ollama.py
rag/retriever/: faiss.py
rag/retriever/static/: base.py  pdf.py
requirements/: base.txt  development.txt
