[project]
name = "rag"
version = "0.1.0"
description = "Project - Retrieval Augmented Generation (RAG) using Ollama to host Large Language Models (LLM) like DeepSeek locally."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu==1.10.0",
    "openai==1.60.0",
    "pymupdf==1.25.2",
]

[tool.flake8]
max-line-length = 100
exclude = ['build', '.venv', '**/__init__.py']
ignore = ['W504', 'F407', 'W503', 'E203']
select = ['B', 'C', 'E', 'F', 'W', 'T4', 'B9']
